# xrlib-demos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: android_builds.yml  build_demos.yml  ubuntu_builds.yml  windows_builds.yml
demo-01_checkxr/: CMakeLists.txt  README.md
demo-01_checkxr/android/: AndroidManifest.xml  build.gradle
demo-01_checkxr/android/java/dev/xrnative/checkxr/: MainActivity.java
demo-01_checkxr/android/resources/values/: strings.xml
demo-01_checkxr/src/: main.cpp
demo-02_displayxr/: CMakeLists.txt  README.md
demo-02_displayxr/android/: AndroidManifest.xml  build.gradle
demo-02_displayxr/android/java/dev/xrnative/checkxr/: MainActivity.java
demo-02_displayxr/android/resources/values/: strings.xml
demo-02_displayxr/src/: main.cpp
demo-03_passthroughxr/: CMakeLists.txt  README.md
demo-03_passthroughxr/android/: AndroidManifest.xml  build.gradle  gradle.properties
demo-03_passthroughxr/android/java/dev/xrnative/checkxr/: MainActivity.java
demo-03_passthroughxr/android/resources/values/: strings.xml
demo-03_passthroughxr/src/: main.cpp
demo-04_handtrackingxr/: CMakeLists.txt  README.md
demo-04_handtrackingxr/android/: AndroidManifest.xml  build.gradle
demo-04_handtrackingxr/android/java/dev/xrnative/checkxr/: MainActivity.java
demo-04_handtrackingxr/android/resources/drawable/: ic_openxr_app.xml
demo-04_handtrackingxr/android/resources/mipmap-anydpi-v26/: ic_openxr_app.xml
demo-04_handtrackingxr/android/resources/values/: strings.xml
demo-04_handtrackingxr/src/: app.cpp  app.hpp  main.cpp
demo-05_inputxr/: CMakeLists.txt  README.md
demo-05_inputxr/android/: AndroidManifest.xml  build.gradle  xrlib-demos-keystore.jks
demo-05_inputxr/android/gradle/wrapper/: gradle-wrapper.properties
demo-05_inputxr/android/java/dev/xrnative/checkxr/: MainActivity.java
demo-05_inputxr/android/resources/values/: strings.xml
demo-05_inputxr/assets/src/: plasma_button.frag
demo-05_inputxr/assets/src/Saber/: LICENSE.md  Saber.blend
demo-05_inputxr/src/: app.cpp  app.hpp  main.cpp
demo-06_interactionsxr/: CMakeLists.txt  README.md
demo-06_interactionsxr/android/: AndroidManifest.xml  build.gradle
demo-06_interactionsxr/android/gradle/wrapper/: gradle-wrapper.properties
demo-06_interactionsxr/android/java/dev/xrnative/checkxr/: MainActivity.java
demo-06_interactionsxr/android/resources/values/: ic_openxr_app_bg.xml  strings.xml
demo-06_interactionsxr/assets/src/: plasma_blade.frag
demo-06_interactionsxr/src/: app.cpp  app.hpp  main.cpp
xrapp/: xrapp.cpp  xrapp.hpp
